--- a/arch/arm/boot/dts/exynos5422-odroidxu3.dts
+++ b/arch/arm/boot/dts/exynos5422-odroidxu3.dts
@@ -60,6 +60,7 @@
 		vqmmc-supply = <&ldo18_reg>;
 		clk_pin = "gpc0-0";
 		clk_addr = "13410000.pinctrl";
+		dw-mshc-hw-reset = <&gpd1 0 0>;
 		clk_val = <0x3>;
 		clk_str_num = <4>;
 		num-ref-clks = <8>;
@@ -199,6 +200,26 @@
 					regulator-initial-mode = <1>;
 				};
 
+				ldo4_reg: LDO4 {
+					regulator-name = "vdd_adc";
+					regulator-min-microvolt = <1800000>;
+					regulator-max-microvolt = <1800000>;
+					regulator-always-on;
+					regulator-boot-on;
+					regulator-ramp-delay = <12000>;
+					regulator-initial-mode = <1>;
+				};
+
+				ldo5_reg: LDO5 {
+					regulator-name = "vdd_pll";
+					regulator-min-microvolt = <1800000>;
+					regulator-max-microvolt = <1800000>;
+					regulator-always-on;
+					regulator-boot-on;
+					regulator-ramp-delay = <12000>;
+					regulator-initial-mode = <1>;
+				};
+
 				ldo6_reg: LDO6 {
 					regulator-name = "vdd_ldo6";
 					regulator-min-microvolt = <1000000>;
@@ -225,10 +246,28 @@
 					regulator-initial-mode = <1>;
 				};
 
+				ldo9_reg: LDO9 {
+					regulator-name = "vdd_ldo9";
+					regulator-min-microvolt = <3000000>;
+					regulator-max-microvolt = <3000000>;
+					regulator-always-on;
+					regulator-boot-on;
+					regulator-initial-mode = <1>;
+				};
+
 				ldo10_reg: LDO10 {
 					regulator-name = "vdd_ldo10";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
+					regulator-always-on;
+					regulator-boot-on;
+					regulator-initial-mode = <1>;
+				};
+
+				ldo11_reg: LDO11 {
+					regulator-name = "vdd_ldo11";
+					regulator-min-microvolt = <1000000>;
+					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
 					regulator-boot-on;
 					regulator-initial-mode = <1>;
@@ -263,6 +302,8 @@
 					regulator-name = "tsp_avdd";
 					regulator-min-microvolt = <3300000>;
 					regulator-max-microvolt = <3300000>;
+					regulator-always-on;
+					regulator-initial-mode = <1>;
 				};
 
 				ldo18_reg: LDO18 {
@@ -350,8 +391,8 @@
 
 				ldo28_reg: LDO28 {
 					regulator-name = "vdd_ldo28";
-					regulator-min-microvolt = <2800000>;
-					regulator-max-microvolt = <2800000>;
+					regulator-min-microvolt = <3300000>;
+					regulator-max-microvolt = <3300000>;
 					regulator-always-on;
 					regulator-initial-mode = <1>;
 				};
@@ -415,10 +456,9 @@
 	};
 
 	pinctrl@13400000 {
-		key_pullup: key-pullup {
-			samsung,pins = "gpx1-3";
-			samsung,pin-pud = <3>;
-			samsung,pin-pud-pdn = <3>;
+		key_pullnone: key-pullnone {
+			samsung,pins = "gpx0-3";
+			samsung,pin-pud = <0>;
 		};
 	};
 
@@ -428,14 +468,14 @@
 		#size-cells = <0>;
 		poll-interval = <100>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&key_pullup>;
+		pinctrl-0 = <&key_pullnone>;
 
 		button@1 {
 			label = "gpio-keys: KEY_POWER";
 			interrupts = <3 0 0>;
-			interrupt-parent = <&gpx1>;
+			interrupt-parent = <&gpx0>;
 			linux,code = <116>;
-			gpios = <&gpx1 3 0xf>;
+			gpios = <&gpx0 3 0xf>;
 			gpio-key,wakeup = <1>;
 		};
 	};
@@ -448,15 +488,6 @@
 	i2c_1: i2c@12C70000 {
 		samsung,i2c-max-bus-freq = <400000>;
 		status = "okay";
-		audio_codec: codec@3e {
-			compatible = "audience,es515";
-			reg = <0x3E>;
-			gpios = <&gpy7 7 0	/* reset */
-				 &gpx0 5 0xF	/* interrupt */
-				 &gpj4 2 0>;	/* wakeup */
-			pinctrl-names = "default";
-			pinctrl-0 = <&codec_ctl &codec_ctl_1>;
-		};
 	};
 
 	i2c_2: i2c@12C80000 {
@@ -470,11 +501,28 @@
 	};
 
 	pinctrl@13400000 {
-		codec_ctl: codec-ctl {
-			samsung,pins = "gpy7-7", "gpx0-5";
-			samsung,pin-con-pdn = <3>;
+		audio_irq: audio-irq {
+			samsung,pins = "gpx3-2";
+			samsung,pin-function = <0xf>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <3>;
+		};
+	};
+
+	hsi2c@12CB0000 {
+		samsung,hs-mode;
+		clock-frequency = <400000>;
+		status = "okay";
+		audio_codec: codec@10 {
+			compatible = "maxim,max98090";
+			reg = <0x10>;
+			odroid,irq-gpio = <&gpx3 2 0xf>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&audio_irq>;
+		};
 		};
 
+	pinctrl@13400000 {
 		b_sess0_irq: b-sess0-irq {
 			samsung,pins = "gpx3-5";
 			samsung,pin-function = <0xf>;
@@ -504,25 +552,6 @@
 			samsung,pin-function = <0>;
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <3>;
-		};
-	};
-
-	pinctrl@14000000 {
-		codec_ctl_1: codec-ctl {
-			samsung,pins = "gpj4-2";
-			samsung,pin-con-pdn = <3>;
-		};
-	};
-
-	/* vision */
-	i2c@12C70000 {
-		status = "okay";
-		samsung,i2c-sda-delay = <100>;
-		samsung,i2c-max-bus-freq = <400000>;
-		status = "okay";
-		fimc-is-vision@20 {
-			compatible = "samsung,exynos5-fimc-is-sensor-6b2";
-			reg = <0x35>;
 		};
 	};
 
@@ -575,6 +604,26 @@
 		status = "disabled";
 	};
 
+	spi_1: spi@12d30000 {
+	    status = "okay";
+        samsung,spi-src-clk = <0>;
+        num-cs = <1>;
+        
+    	ioboard_spi   {
+    	    compatible = "ioboard-spi";
+    	    reg = <0>;
+    	    spi-max-frequency = <20000000>;
+    	    pinctrl-names = "default";
+    	    pinctrl-0 = <&ioboard_flash_cs &ioboard_wp>;
+    	    wp-gpio = <&gpx1 5 0>;
+    	    
+    	    controller-data {
+        	    cs-gpio = <&gpa2 5 0>;
+        	    samsung,spi-feedback-delay = <0>;
+    	    };
+    	};
+    };
+
 	spi_2: spi@12d40000 {
 		status = "disabled";
 	};
@@ -609,16 +658,116 @@
     };
 
 	sound {
-		compatible = "samsung,xyref-es515";
+		compatible = "hardkernel,odroid-max98090";
+		clocks = <&clock 6>;		/* fout_epll */
+		clock-names = "fout_epll";
 		samsung,audio-cpu = <&i2s0		/* primary */
 				     &i2s0>;		/* secondary */
 		samsung,audio-cpu-spdif = <&spdif>;	/* spdif */
 		samsung,audio-codec = <&audio_codec
-				       &audio_codec
-				       &audio_codec_dummy>;
+				       &audio_codec>;
 		status = "okay";
 	};
 
+	pinctrl@13400000 {
+		gpio_i2c_sda: gpio-i2c-sda {
+			samsung,pins = "gpx3-1";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <0>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x00>;
+		};
+		gpio_i2c_scl: gpio-i2c-scl {
+			samsung,pins = "gpx1-7";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <0>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x00>;
+		};
+		ioboard_key: ioboard-key {
+			samsung,pins = "gpx2-5", "gpx2-6", "gpx1-6", "gpx1-2";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <0>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x00>;
+		};
+		ioboard_led: ioboard-led {
+			samsung,pins = "gpx2-7", "gpx2-4", "gpx1-3", "gpx2-0";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <1>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x03>;
+		};
+		ioboard_wp: ioboard-wp  {
+			samsung,pins = "gpx1-5";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <0>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x00>;
+		};
+	};
+	pinctrl@14010000 {
+		ioboard_led_1: ioboard-led-1 {
+			samsung,pins = "gpb3-2";
+			/* 0 = input, 1 = output */
+			samsung,pin-function = <1>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+			samsung,pin-pud = <0x03>;
+		};
+        ioboard_flash_cs: ioboard-flash-cs {
+            samsung,pins = "gpa2-5";
+			/* 0 = input, 1 = output, 2 = SPI_nSS */
+            samsung,pin-function = <2>;
+			/* 0 = disable, 1 = pull dn, 2 = reserved, 3 = pull up */
+            samsung,pin-pud = <0>;
+        };		
+	};
+
+	ioboard_key_led    {
+        compatible = "ioboard-keyled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&ioboard_key &ioboard_led &ioboard_led_1>;
+		gpios = <
+		         &gpx2 5 0 /* IOBOARD_SW1 */
+			     &gpx2 6 0 /* IOBOARD_SW2 */
+		         &gpx1 6 0 /* IOBOARD_SW3 */
+			     &gpx1 2 0 /* IOBOARD_SW4 */
+		         &gpx2 7 0 /* IOBOARD_LED1 */
+			     &gpx2 4 0 /* IOBOARD_LED2 */
+		         &gpx1 3 0 /* IOBOARD_LED3 */
+			     &gpb3 2 0 /* IOBOARD_LED4 */
+			     &gpx2 0 0 /* IOBOARD_LED5 */
+			    >;
+		status = "okay";
+	};
+
+	i2c_gpio {
+		compatible = "i2c-gpio";
+		gpios = <
+		         &gpx3 1 0 /* sda */
+			     &gpx1 7 0 /* scl */
+			    >;
+		i2c-gpio,sda-open-drain;
+		i2c-gpio,scl-open-drain;
+		i2c-gpio,delay-us = <10>;	/* ~50 kHz */
+		#address-cells = <1>;
+		#size-cells = <0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&gpio_i2c_sda &gpio_i2c_scl>;
+		status = "okay";
+
+		/* light sensor : bh1780 dirver */
+		bh1780@29 {
+			compatible = "ioboard-bh1780";
+			reg = <0x29>;
+		};
+
+		/* pressure sensor : bmp180 dirver */
+		bmp180@77 {
+			compatible = "ioboard-bmp180";
+			reg = <0x77>;
+		};
+	};
 	
     leds {
         compatible = "gpio-leds";
