--- a/arch/arm/boot/dts/exynos5422-pinctrl.dtsi
+++ b/arch/arm/boot/dts/exynos5422-pinctrl.dtsi
@@ -80,6 +80,13 @@
 			samsung,pin-pud = <1>;
 			samsung,pin-drv = <0>;
 		};
+
+        dp_hpd: dp_hpd  {
+            samsung,pins = "gpx0-7";
+            samsung,pin-function = <3>;
+            samsung,pin-pud = <0>;
+            samaung,pin-drv = <0>;
+        };		
 	};
 
 	pinctrl@13410000 {
@@ -568,14 +575,14 @@
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <0>;
 		};
-
+/*
 		i2c1_bus: i2c1-bus {
 			samsung,pins = "gpb3-3", "gpb3-2";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <0>;
 		};
-
+*/
 		i2s1_bus: i2s1-bus {
 			samsung,pins = "gpb0-0", "gpb0-1", "gpb0-2", "gpb0-3",
 					"gpb0-4";
