--- a/drivers/hardkernel/Makefile
+++ b/drivers/hardkernel/Makefile
@@ -1,1 +1,3 @@
 obj-$(CONFIG_ODROID_EXYNOS5_SP)       += ina231-i2c.o ina231-misc.o ina231-sysfs.o
+obj-$(CONFIG_ODROID_EXYNOS5_IOBOARD)  += ioboard-bh1780.o ioboard-bmp180.o
+obj-$(CONFIG_ODROID_EXYNOS5_IOBOARD)  += ioboard-keyled.o ioboard-spi.o ioboard-spi-misc.o
