--- a/arch/arm/boot/dts/exynos5422-odroidxu3.dts
+++ b/arch/arm/boot/dts/exynos5422-odroidxu3.dts
@@ -880,4 +880,35 @@
 		hdmi-en-supply = <&reg_hdmi_en>;
 	};
 	
+	/* AOC 22" DP Config */
+	
+	dp-controller {
+		status = "okay";
+        pinctrl-names = "default";
+        pinctrl-0 = <&dp_hpd_gpio>;
+
+
+        display-timings {
+                native-mode = <&timing1>;  
+
+                timing1: timing@1 {
+                        clock-frequency = <148500000>;
+                        hactive = <1920>;
+                        vactive = <1080>;
+                        hfront-porch = <24>;  
+                        hback-porch = <56>;
+                        hsync-len = <14>;
+                        vback-porch = <3>;
+                        vfront-porch = <3>;
+                        vsync-len = <3>;
+                };
+        };		
+	};
+	
+	fimd {
+        status = "enabled";
+        samsung,invert-vclk;
+	};
+
+	
 };
