ARM: odroidxu3_defconfig: enable DP

--- a/arch/arm/configs/odroidxu3_defconfig
+++ b/arch/arm/configs/odroidxu3_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.43 Kernel Configuration
+# Linux/arm 3.10.46 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -1061,7 +1061,7 @@ CONFIG_OF=y
 # Device Tree and Open Firmware support
 #
 CONFIG_PROC_DEVICETREE=y
-# CONFIG_OF_SELFTEST is not set
+CONFIG_OF_SELFTEST=y
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
 CONFIG_OF_ADDRESS=y
@@ -2032,7 +2032,10 @@ CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_EXYNOS=y
 CONFIG_DRM_EXYNOS_IOMMU=y
 CONFIG_DRM_EXYNOS_DMABUF=y
-# CONFIG_DRM_EXYNOS_FIMD is not set
+CONFIG_DRM_EXYNOS_FIMD=y
+# CONFIG_DRM_EXYNOS_DPI is not set
+# CONFIG_DRM_EXYNOS_DSI is not set
+CONFIG_DRM_EXYNOS_DP=y
 CONFIG_DRM_EXYNOS_HDMI=y
 # CONFIG_DRM_EXYNOS_VIDI is not set
 # CONFIG_DRM_EXYNOS_G2D is not set
@@ -3012,6 +3015,16 @@ CONFIG_ARM_GIC=y
 CONFIG_ODROID_EXYNOS5_SP=y
 CONFIG_ODROID_EXYNOS5_IOBOARD=y
 # CONFIG_ODROID_EXYNOS5_IOBOARD_DEBUG is not set
+
+#
+# PHY Subsystem
+#
+CONFIG_GENERIC_PHY=y
+# CONFIG_PHY_EXYNOS_MIPI_VIDEO is not set
+CONFIG_PHY_EXYNOS_DP_VIDEO=y
+# CONFIG_BCM_KONA_USB2_PHY is not set
+# CONFIG_PHY_SAMSUNG_USB2 is not set
+# CONFIG_PHY_EXYNOS5_USBDRD is not set
 
 #
 # File systems
