ARM: dts: odroidxu3: correct the timmings for the AOC 22inch LCD

--- a/arch/arm/boot/dts/exynos5422-odroidxu3.dts
+++ b/arch/arm/boot/dts/exynos5422-odroidxu3.dts
@@ -886,7 +886,7 @@
 		status = "okay";
         pinctrl-names = "default";
         pinctrl-0 = <&dp_hpd_gpio>;
-
+		samsung,hpd-gpio = <&gpx0 7 3>;
 
         display-timings {
                 native-mode = <&timing1>;  
@@ -895,12 +895,12 @@
                         clock-frequency = <148500000>;
                         hactive = <1920>;
                         vactive = <1080>;
-                        hfront-porch = <24>;  
-                        hback-porch = <56>;
-                        hsync-len = <14>;
-                        vback-porch = <3>;
-                        vfront-porch = <3>;
-                        vsync-len = <3>;
+                        hfront-porch = <88>;  
+                        hback-porch = <148>;
+                        hsync-len = <44>;
+                        vback-porch = <36>;
+                        vfront-porch = <4>;
+                        vsync-len = <5>;
                 };
         };		
 	};
