Juno: Enable DMA for PL011 UART.
PL011 can now use DMA. TX channel is always used, RX usage depends
on the DMA engine's ability to process residual data (absent in
Juno). To cater for RX channel not being activated we als enable
to automatic polling.

Signed-off-by: Liviu Dudau <Liviu.Dudau@arm.com>

--- a/arch/arm64/boot/dts/juno.dts
+++ b/arch/arm64/boot/dts/juno.dts
@@ -371,9 +371,10 @@
 		interrupts = <0 83 4>;
 		clocks = <&soc_uartclk>, <&soc_refclk100mhz>;
 		clock-names = "uartclk", "apb_pclk";
-		/* dmas = <&dma0 1
+		dmas = <&dma0 1
 			&dma0 2>;
-		dma-names = "rx", "tx"; */
+		dma-names = "rx", "tx";
+		auto-poll = <1>;
 	};
 
 	/* this UART is reserved for secure software.
