linaro/configs: enable CONFIG_SW_SYNC for Vulkan on Android
Enable SW_SYNC and SW_SYNC_USER in android.conf.  This is
required for Vulkan tests on Android to pass.

Jira: MPDBSP-1069
Change-Id: I6b14704afe21a902ddeb1e783f24fc918dbcf09e

--- a/linaro/configs/android.conf
+++ b/linaro/configs/android.conf
@@ -146,6 +146,8 @@ CONFIG_STAGING=y
 CONFIG_SWITCH=y
 CONFIG_SWP_EMULATION=y
 CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+CONFIG_SW_SYNC_USER=y
 CONFIG_TUN=y
 CONFIG_UNIX=y
 CONFIG_USB_GADGET=y
